fix: should now display on ios devices

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,5 @@
 .header {
-  height: 60vh;
-  min-height: 560px;
+  height: 560px;
 }
 
 .bg {
@@ -11,7 +10,6 @@
   width: 100vw;
   background-size: cover;
   background-position: 50% 20%;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   z-index: -1;
 }
